--- a/BONUS_2/css/style.css
+++ b/BONUS_2/css/style.css
@@ -109,3 +109,19 @@ button {
     bottom: 10px;
     left: 10px;
 }
+.btn3 {
+    position: absolute;
+    bottom: 40%;
+    left: 10px;
+    font-size: 10px;
+    background-color: rgba(255, 0, 0, 0.6);
+
+}
+.btn4 {
+    position: absolute;
+    bottom: 60%;
+    left: 10px;
+    font-size: 10px;
+    background-color: rgba(0, 128, 0, 0.6);
+
+}
